# cot-send-example

./: Cargo.toml  README.md
src/: main.rs
