[package]
name = "cot-send-example"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
#cot-proto = { version = "0.3.1", features = ["tak"] }
cot-proto = { path = "../cot-proto/", features = ["tak"] }
quick-xml = { version = "0.37.0", features = ["serde"] }
